stderr
JudgeMan.java:39: error: missing return statement
    }
    ^
1 error
